- make-random-state: fix problem with simple-vectors
The correct initialization types for =make-random-state= are:
=(OR RANDOM-STATE FIXNUM (MEMBER T NIL))=.

Initializing a random state with an appropriate array (element type and
arity dependent on platform) is also possible.

- ext:random-state-array: new extension for random-states. Usage:
=(ext:random-state-array random-state)=.

** Enhancements
- Initial port for the Haiku platform
The port is done by Kacper Kasper's work, one of Haiku developers.

- Refactored ECL internal tests framework
Tests in =src/tests= are now asdf-loadable (with =load-source-op=) and
divided into test suites. =make check= target runs all regression and
feature tests which aren't supposed to fail.

- Removed 15000 lines of obsolete code
Files not included in the buildsystem but lingering in the codebase or
options failing to build. All info is added in the new documentation in the
section "Removed interfaces".

- Improved man page and help output.
Man page now contains up-to-date list of flags, as well as explanation of
flag's behavior.

- Indented C/C++ code to follow emacs's gnu C style
This is a first step towards coding standards in the
documentation. Additionally all in the src/c/ directory are listed in the
appropraite documentation section (new-doc).

- Refactored =list_current_directory in unixfsys.d=
Function was obfuscated with ifdefs with non-even pairs of =#\{= and =#\}=.

** Issues fixed
- ECL builds now succesfully with `--with-ieee-fp=no' option

- ext:file-stream-fd
Doesn't cause an internal-error if fed with not a file-stream (signals a
SIMPLE-TYPE-ERROR condtition).

- stable-sort bugfix and improvement in speed
Adapted from SBCL by Diogo Franco.

- typep: accept * type specifier as abbreviation of t as described in
'2.4.3 Type Specifiers' of the specification.

- MOP: fix problemes when redefining non-standard and anonymous classes
Bugs identified and fixed by Pascal Costanza.
